<resources>
    <string name="app_name">Todoapp</string>
    <string name="new_todo">New Todo</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="update">Update</string>
    <string name="edit_todo">Edit Todo</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
</resources>