<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/add_todo_background"
        android:elevation="6dp"
        android:layout_centerInParent="true"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_todo"
            android:textColor="@color/white"
            android:padding="10dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:padding="6dp"/>

        <EditText
            android:id="@+id/title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/todo_text_background"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:maxLength="20"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:padding="6dp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/description_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/todo_text_background"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:maxLines="2"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="10dp"
                android:clickable="true"/>

            <TextView
                android:id="@+id/add_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/teal_200"
                android:padding="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:clickable="true"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>