<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.TodoDetailsActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@color/purple_500">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            app:tint="@color/white"
            android:clickable="true"/>

        <TextView
            android:id="@+id/title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/title"
            android:textColor="@color/white"
            android:layout_toEndOf="@id/back_btn"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            android:layout_alignParentEnd="true"
            app:tint="@color/white"
            android:clickable="true"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Status"
                android:layout_alignParentStart="true"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"/>


            <CheckBox
                android:id="@+id/status_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:padding="10dp"
                android:layout_marginStart="20dp"/>

            <ImageView
                android:id="@+id/edit_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_edit"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:clickable="true"/>

        </RelativeLayout>


        <TextView
            android:id="@+id/description_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/purple_500"
            android:padding="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Created at"
                android:textColor="@color/black"
                android:padding="10dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20-01-2020"
                android:textColor="@color/purple_500"
                android:padding="10dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"/>

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"/>

</RelativeLayout>